fix: prevent persistent zoom on iOS by blurring inputs when closing modal

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -24,18 +24,12 @@
   color: var(--text);
 }
 
-.modal-content > #list-name, .modal-content > #event-title {
+.modal-content > #list-name, .modal-content > #event-title, .modal-content > #mail-to {
   border-radius: 10px;
   width: 90%;
   padding: 8px;
   margin: 10px 0;
-}
-
-.modal-content #mail-to{
-  border-radius: 10px;
-  width: 90%;
-  padding: 8px;
-  margin: 10px 0;
+  font-size: 1rem;
 }
 
 .fc-event-title::first-letter {
